# SynSekai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  tarpaulin.toml
.github/workflows/: ci.yml
patches/librqbit-tracker-comms/: .cargo_vcs_info.json  Cargo.toml
patches/librqbit-tracker-comms/src/: tracker_comms.rs
src/: app.rs  engine.rs  main.rs  spoofer.rs  terminal.rs  tui.rs  types.rs
src/ui/: mod.rs  popups.rs  spoofer_panel.rs  status_bar.rs  tab_bar.rs  torrent_table.rs
