[package]
name = "SynSekai"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "synsekai"
path = "src/main.rs"

[dependencies]
librqbit   = { version = "8", default-features = false, features = ["default-tls"] }
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
tokio      = { version = "1", features = ["full"] }
futures    = "0.3"
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
bytesize   = "1"
arboard    = "3"
dirs       = "5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile   = "3"

[patch.crates-io]
librqbit-tracker-comms = { path = "patches/librqbit-tracker-comms" }
